bk_ida/gccida/g0/init_varasm_once
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_varasm_once/src/varasm.c:5711:51: error: use of undeclared identifier 'WebCore'
in_named_htab = htab_create( 0x1FuLL, ( htab_hash)WebCore::MessagePortChannel::close, ( htab_eq)in_named_entry_eq, 0LL); 
                                                  ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/init_varasm_once/src/obj/varasm.o] Error 1
